--- a/mvvm_comander/mvvm_comander/mvvm_comander.csproj
+++ b/mvvm_comander/mvvm_comander/mvvm_comander.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="ViewModel\" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
   </ItemGroup>
 
 </Project>
